--- a/.github/workflows/schedule-visit-website.yml
+++ b/.github/workflows/schedule-visit-website.yml
@@ -17,4 +17,4 @@ jobs:
  
       - name: Visit Website
         run: |
-          curl https://webhost.zlzgz.eu.org/sub
+          curl http://webhost.zlzgz.eu.org/sub
